<resources>
    <string name="download_url_fragment">questionnaires/</string>
    <string name="base_url">http://landscape-connect.com/</string>
    <string name="user_agent_http">LandscapeConnectV1</string>
    <string name="questionnaire_gallery_url">http://landscape-connect.com/app/#/page/questionnaires</string>
    <string name="app_name">Landscape Connect</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="questionnaires">Questionnaires</string>
    <string name="scan_qr_code">Scan a QR code</string>
    <string name="space_selected">" selected"</string>

    <string name="add_code_dialog_title">Add from Code</string>
    <string name="add_code_dialog_content">Please add the 5 character code</string>
    <string name="add_code_dialog_hint">#####</string>
    <string name="add_code_dialog_prefill">""</string>

    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_content">Pending uploads for these questionnaires will also be deleted. \nAre you sure you want to continue?</string>
    <string name="delete_dialog_positive">Delete</string>
    <string name="delete_dialog_negative">Cancel</string>

    <!-- Questionnaire Page -->
    <string name="downloaded">Downloaded</string>
    <string name="published">Published</string>
    <string name="description">Description</string>
    <string name="shortcode">Short code</string>
    <string name="website">Website</string>
    <string name="pending_uploads">Pending upload(s)</string>


    <string name="downloading_questionnaire">Downloading Questionnaire</string>
    <string name="please_wait">Please wait</string>
    <string name="answer">Answer</string>
    <string name="new_landscape">New Landscape</string>
    <string name="new_landscape_take_photo_button">Take Photo</string>

    <string name="done">Done</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="back">Back</string>
    <string name="letsgo">Lets go!</string>

    <string name="question_sections">Question sections</string>
    <string name="please_complete">"Please answer all required questions</string>
    <string name="optional">Optional</string>
    <string name="required">Required</string>

    <string name="error_required_questions">Please answer all required questions</string>
    <string name="error_required_photo">Please take a photo</string>
    <string name="error_required_location">Waiting for location</string>

    <string name="upload_queue">Upload Queue</string>

    <string name="send">Send</string>

    <string name="drawer_questionnaires">Questionnaires</string>
    <string name="drawer_queue">Upload Queue</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_about">About</string>
    <string name="drawer_how_it_works">How it works</string>

    <string name="failed_to_download">Failed to download</string>
    <string name="get_location">getting location</string>
    <string name="got_location">got location</string>
    <string name="fa_compass_spin">" {fa-compass spin}"</string>
    <string name="fa_check">" {fa-check}"</string>
    <string name="fa_cross">" {fa-times}"</string>
    <string name="about">About</string>
    <string name="about_title">Landscape Connect</string>
    <string name="about_description">"Landscape Connect is developed by the Rate my View team as a companion product to Rate my View. \n\nIt allows greater understanding of landscape perceptions by supporting tailored questions. It can be used by landscape stakeholders instead of traditional questionnaires.\n\nThe app allows clearer data and results to be gathered in a faster and more efficient way over paper and clipboard methods.\n\nDownload a questionnaire to get started."</string>

    <string name="uploading_title">"Uploading"</string>
    <string name="uploading_description">"Saved answers"</string>
    <string name="upload_successful">" upload(s) successful"</string>
    <string name="upload_thanks">"Thanks for completing the questionnaire"</string>
    <string name="upload_queue_empty">Answer a questionnaire\nto see it in the upload queue</string>
    <string name="questionnaires_empty">Download a questionnaire to get started! \n\nUse the <a href="http://landscape-connect.com/app/#/page/questionnaires">Questionnaire Gallery</a> \n\nOr click the + below</string>

    <string name="uses_location">Uses location</string>
    <string name="uses_photo">Uses photo</string>
    <string name="public_data">Public data</string>


    <!--Content description strings-->
    <string name="cont_desc_header_img">Header Image</string>
    <string name="cont_desc_questionnaire_row">Questionnaire</string>
    <string name="cont_desc_sections_intro">Section intro</string>
    <string name="cont_desc_section_comp">Section completed?</string>
    <string name="cont_desc_response_photo">User photo</string>



    <!-- Intro strings -->
    <string name="intro_1_title">Landscape Connect</string>
    <string name="intro_1_subtitle">The landscape based questionnaire tool</string>

    <string name="intro_2_title">Download a questionnaire</string>
    <string name="intro_2_subtitle">Scan a Landscape Connect barcode or enter the short code of a questionnaire to download it</string>

    <string name="intro_3_title">Complete questionnaire</string>
    <string name="intro_3_subtitle">Take a photo and answer the associated questions</string>

    <string name="intro_4_title">Automatic upload</string>
    <string name="intro_4_subtitle">"Completed questionnaires are uploaded in the background when you're in signal range."</string>

    <string name="intro_5_title">Engage</string>
    <string name="intro_5_subtitle">"Optionally view yours and other's results online"</string>
    <string name="created_by">Created by</string>
</resources>
