<LinearLayout android:id="@+id/sections_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<LinearLayout-->
    <!--android:orientation="vertical"-->
    <!--android:id="@+id/task_progressbar_holder"-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="wrap_content">-->
    <!--</LinearLayout>-->

    <!-- Hold all location views -->
    <LinearLayout
        android:id="@+id/page2_intro_location"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sections_get_location">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">
                <!-- Getting location -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/get_location"/>

                <com.joanzapata.iconify.widget.IconTextView
                    android:text="@string/fa_compass_spin"
                    android:shadowColor="#22000000"
                    android:shadowDx="3"
                    android:shadowDy="3"
                    android:shadowRadius="1"
                    android:textSize="20sp"
                    android:textColor="#666"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </com.joanzapata.iconify.widget.IconTextView>

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sections_got_location"
            android:visibility="gone">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">
                <!-- Got location -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/got_location" />

                <com.joanzapata.iconify.widget.IconTextView
                    android:text="@string/fa_check"
                    android:shadowColor="#22000000"
                    android:shadowDx="3"
                    android:shadowDy="3"
                    android:shadowRadius="1"
                    android:textSize="20sp"
                    android:textColor="#666"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </com.joanzapata.iconify.widget.IconTextView>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_sections"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/sections_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>