<!-- Intro screen -->
<RelativeLayout android:id="@+id/welcome_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:weightSum="1"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/page1_intro_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_alignParentTop="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/page1_intro_desciprion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_below="@+id/page1_intro_title"
                android:layout_centerHorizontal="true"
                style="@style/Base.TextAppearance.AppCompat.Body1" />

            <ImageView
                android:id="@+id/page1_intro_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/page1_intro_desciprion"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="false"
                android:contentDescription="@string/cont_desc_sections_intro"/>

            <LinearLayout
                android:id="@+id/page1_intro_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/page1_intro_image">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/get_location"
                    />

                <com.joanzapata.iconify.widget.IconTextView
                    android:text="@string/fa_compass_spin"
                    android:shadowColor="#22000000"
                    android:shadowDx="3"
                    android:shadowDy="3"
                    android:shadowRadius="1"
                    android:textSize="20sp"
                    android:textColor="#666"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >
                </com.joanzapata.iconify.widget.IconTextView>

            </LinearLayout>

            <Button
                android:id="@+id/button_take_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:longClickable="true"
                android:text="@string/new_landscape_take_photo_button"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/page1_intro_location"/>
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>