<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2"
        android:layout_gravity="center_horizontal" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/questionnaire_details_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/questionnaire_details_description" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/website"
                    android:id="@+id/textView8" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:autoLink="web"
                    android:id="@+id/questionnaire_details_website" />
            </LinearLayout>

            <!--<LinearLayout-->
                <!--android:orientation="vertical"-->
                <!--android:layout_margin="10dp"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent" >-->

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/shortcode"-->
                    <!--android:id="@+id/textView9" />-->

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="New Text"-->
                    <!--android:autoLink="web"-->
                    <!--android:id="@+id/questionnaire_details_shortcode" />-->
            <!--</LinearLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uses_location"
                    android:id="@+id/usesLocationText" />

                <com.joanzapata.iconify.widget.IconTextView
                    android:text="@string/fa_check"
                    android:visibility="gone"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/usesLocationCheck"/>

                <com.joanzapata.iconify.widget.IconTextView
                    android:text="@string/fa_cross"
                    android:visibility="gone"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/usesLocationCross"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uses_photo"
                    android:id="@+id/usesPhotoText" />

                <com.joanzapata.iconify.widget.IconTextView
                    android:text="@string/fa_check"
                    android:textSize="20sp"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/usesPhotoCheck"/>

                <com.joanzapata.iconify.widget.IconTextView
                    android:text="@string/fa_cross"
                    android:textSize="20sp"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/usesPhotoCross"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/downloaded"
                    android:id="@+id/textView3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/questionnaire_details_installed" />
            </LinearLayout>

            <!--<LinearLayout-->
                <!--android:orientation="vertical"-->
                <!--android:layout_margin="10dp"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent" >-->

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/published"-->
                    <!--android:id="@+id/textView5" />-->

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="New Text"-->
                    <!--android:id="@+id/questionnaire_details_published" />-->
            <!--</LinearLayout>-->

        </LinearLayout>
    </ScrollView>

</LinearLayout>